fix checkbox alignment issue in safari

--- a/app/stylesheets/core/menu.scss
+++ b/app/stylesheets/core/menu.scss
@@ -154,7 +154,7 @@
 				#plusone-checkbox {
 					position: absolute;
 					top: 1px;
-					left: -4px;
+					left: -2px;
 					border: none;
 					box-shadow: none;
 					border-radius: 0;
