--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1173,7 +1173,7 @@ button.swiper-pagination-bullet {
 #menu .menu-block form #plusOne #plusone-checkbox {
   position: absolute;
   top: 1px;
-  left: -4px;
+  left: -2px;
   border: none;
   box-shadow: none;
   border-radius: 0;
